# external-metadata-awareness

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CLEANUP_NEEDED.md  DEVELOPMENT.md  Dockerfile  ENV_TRIAD_WORKFLOW.md  GETTING_STARTED.md  INTEGRATION_PLAN.md  Makefile  PRIORITY_ROADMAP.md  PRODUCT_STATUS.md  README.md  SECURITY.md  Updated_Lexmatch_Failure_Report.csv  analyze_biosample_coverage.py  architectural-pattern-inconsistency-analysis.md  bigquery_interactions.md  bioportal_class_mapping_errors.txt  biosample-duckdb-reannotation.Makefile  cache-consolidation.md  clean.Makefile  copy_database_without_compression.py  docker-compose.yml  docker.Makefile  env-triad-annotation-etc-collections.tsv  env-triad-annotation.md  env_triad.Makefile  env_triad_annotation-etc-collections.tsv  env_triad_annotation.md  env_triad_annotation.yaml  env_triads.md  env_triads_chat_gpt_linkml_schema.yaml  for-lexmatch.sh  for-lexmatch.txt  for-lexmatch.txt.orig  iaa.Makefile  iaa.py  (+19 more)
.github/: dependabot.yml
Makefiles/: README.md  env_broad_scale.Makefile  env_triads.Makefile  envo.Makefile  github.Makefile  gold.Makefile  measurement_discovery.Makefile  mixs.Makefile  ncbi_biosample_measurements.Makefile  ncbi_metadata.Makefile  ncbi_schema.Makefile  ncbi_to_duckdb.Makefile  nmdc_metadata.Makefile  nmdc_schema.Makefile  non-host-env_local_scale.Makefile  soil-env_broad_scale.Makefile  soil-env_local_scale.Makefile  soil-env_medium.Makefile  sra_metadata.Makefile  test_workflow.Makefile  water-env_broad_scale.Makefile
claude-mds/: CBORG-CODE.md  README-duckdb-biosamples-full.md  September-2025-Biosample-DuckDB-documentation.md  adhoc-scripts-db-analysis.md  biosamples_flattened_path_inclusion_analysis.md  claude_overnight_skip_analysis_2025-09-29.md  compass_artifact_wf-06eefb19-9272-4def-9e2c-7206bd671ea2_text_markdown.md  consistency-audit-2025-09-27.md  env-triad-annotation.md  env-triads-makefile-scripts-update.md  env_triads.md  enviema.md  environmental-context-targets-not-covered-2025-09-29.md  measurement-discovery-consistency-assessment.md  measurement-value-unit-extraction-strategies.md  models-synonyms-capture-analysis.md  nmdc-env-triad-valueset-lifecycle.md  query_comparison_results.md  session-addendum-2025-09-27.md  sra_duckdb_vs_parquet.md  to-do-mongo-js.md
claude_mds/: submission-schema-CLAUDE.md
config/: env-local-scale-extraction-config.yaml  env_local_scale-evidence-config.yaml  env_local_scale_extraction_config.yaml  oaklib-setup-config.yaml  soil-env_broad_scale-evidence-config.yaml  soil-env_local_scale-evidence-config.yaml  soil-env_medium-evidence-config.yaml  water-env_broad_scale-evidence-config.yaml
contributed/: mam-env-package-inferences.tsv
docs/: ARCHITECTURE.md  CBORG-CODE.md  CLAUDE_FULL_REFERENCE.md  CLEANUP_NEEDED.md  DEVELOPMENT.md  ENV_TRIAD_WORKFLOW.md  GETTING_STARTED.md  INTEGRATION_PLAN.md  MONGODB_PATTERNS.md  NMDC_Biosample_API_Enrichment_Strategy.md  NMDC_Biosample_Measurement_Discovery_Strategy.md  PRIORITY_ROADMAP.md  adhoc-scripts-db-analysis.md  bioproject_metadata_completeness_analysis.md  biosample-flattening-timeline-2020-2025.md  collection-export-rationale.md  collection-structure-reference.md  data-products-inventory.md  env-triad-data-pipeline.md  env-triad-envo-integration-history.md  env_triads.md  enviema.md  environmental-context-targets-not-covered-2025-09-29.md  environmental-triad-value-set-lifecycle.md  gold-and-jgi-data-access.md  gold-knowledge-management.md  markdown-freshness-report-with-summaries.md  markdown-freshness-report.md  measurement-discovery-completion-and-cleanup-2025-09-29.md  measurement_field_insights_2025-09-29.md  metadata-sources-and-access-methods.md  mixs-required-slot-report.md  mongodb-collection-comparison-local-vs-nuc-2025-10-13.md  nmdc-data-access.md  nmdc-flattening-lakehouse-export.md  nmdc-prod-mongo-tunnel.md  pipeline-rebuild-pain-points.md  postgres-sqlite-usage-analysis.md  repo-data-regeneration.md  requests-caching.md  (+5 more)
external_metadata_awareness/: add_duckdb_key_value_row.py  analyze_attribute_definitions_tfidf.py  analyze_collection_flatness.py  analyze_nmdc_biosample_coverage.py  bigquery_biosamples_to_bioprojects.py  biosample_duckdb_reannotation.py  biosample_json_to_context_tsv.py  build_prompt_from_template.py  cborg_test.py  class_slot_flattening.py  combine_cache_files.py  count_biosample_context_vals_from_postgres.py  count_non_empty_mongodb_fields.py  count_xml_paths.py  dump_sra_metadata_table_schema.py  entrez_vs_mongodb.py  env_local_scale_extraction.py  envo_local_scale_extraction.py  export_duckdb_to_parquet.py  export_flattened_gold_to_csv.py  export_sra_accession_pairs.py  export_submissions_to_duckdb.py  extract_all_ncbi_packages_fields.py  extract_nmdc_doi_inventory.py  extract_value_set_evidence.py  fetch_document.py  fetch_github_releases.py  find_array_object_mongodb_fields.py  find_nmdc_measurement_slots.py  first_n_attributes_duckdb.py  flatten_biosample_attributes.py  flatten_nmdc_collections.py  get_authoritative_labels_for_nmdc_context_columns.py  get_authoritative_labels_only_for_nmdc_context_columns.py  get_extension_unique_slots.py  gsheets_helper.py  infer_biosample_env_context_obo_curies.py  infer_schema_with_batching.py  insert_all_flat_gold_biosamples.py  insert_all_flat_gold_seq_projects.py  (+42 more)
flag_data_schema/: flag_data.yaml  flag_data_all_lower.tsv  flag_data_all_upper.tsv  flag_data_with_colors.yaml  flag_schema_notes.txt
lexmatch-output/: env_triad_pvs_vs_agro.SSSOM.tsv  env_triad_pvs_vs_biolink.SSSOM.tsv  env_triad_pvs_vs_chmo.SSSOM.tsv  env_triad_pvs_vs_cob.SSSOM.tsv  env_triad_pvs_vs_comet.SSSOM.tsv  env_triad_pvs_vs_ecocore.SSSOM.tsv  env_triad_pvs_vs_ecosim.SSSOM.tsv  env_triad_pvs_vs_ecso.SSSOM.tsv  env_triad_pvs_vs_ecto.SSSOM.tsv  env_triad_pvs_vs_edam.SSSOM.tsv  env_triad_pvs_vs_envo.SSSOM.tsv  env_triad_pvs_vs_envthes.SSSOM.tsv  env_triad_pvs_vs_goldterms.SSSOM.tsv  env_triad_pvs_vs_iao.SSSOM.tsv  env_triad_pvs_vs_ido.SSSOM.tsv  env_triad_pvs_vs_mop.SSSOM.tsv  env_triad_pvs_vs_ms.SSSOM.tsv  (+212 more)
(+2373 files in other folders)
