[tool.poetry]
name = "external-metadata-awareness"
version = "0.1.0"
description = "Tools for fetching and processing external schemas, ontologies and metadata records. Includes value set maintenance."
authors = ["Mark A. Miller <MAM@lbl.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# Removed: textdistance = "^4.6.3" - Was only used by merge_in_reference_data.py
click = "^8.1.7"
db-dtypes = "^1.4.1"
duckdb = "^1.0.0"
duckdb-engine = "^0.14.0"
folium = "^0.19.4"
git-filter-repo = "^2.47.0"
google-cloud-bigquery = "^3.25.0"
google-cloud-bigquery-storage = "^2.28.0"
gsheet-pandas = "^0.2.8"
gspread = "^6.1.2"
jupyter = "^1.1.1"
llm = "^0.15"
lxml = "^5.3.0"
matplotlib = "^3.9.2"
notebook = "^7.3.2"
numpy = "2.1.0"
oaklib = "^0.6.14"
oauth2client = "^4.1.3"
openpyxl = "^3.1.5"
pandas = "^2.2.2"
psycopg2-binary = "^2.9.9"
pyarrow = "^18.1.0"
pygithub = "^2.3.0"
pymongo = "^4.8.0"
pymupdf = "^1.25.3"
python-dotenv = "^1.0.1"
quantulum3 = "^0.9.2"
rapidfuzz = "^3.12.1"
rasterio = "^1.4.3"
scikit-learn = "1.5.0"
scipy = "^1.14.1"
stemming = "^1.0.1"
tqdm = "^4.66.5"
xmltodict = "^0.13.0"
plotly = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# Original aliases
biosample-json-to-context-tsv = 'external_metadata_awareness.biosample_json_to_context_tsv:create_biosample_table'
build-prompt-from-template = 'external_metadata_awareness.build_prompt_from_template:process_files'
count-xml-paths = 'external_metadata_awareness.count_xml_paths:main'
get-extension-unique-slots = 'external_metadata_awareness.get_extension_unique_slots:process_json'
ncbi-packages-csv-report = 'external_metadata_awareness.ncbi_packages_csv_report:xml_to_csv'
random-sample-resources = 'external_metadata_awareness.adhoc.random_sample_resources:downsample_json_resources'
xml-to-mongo = 'external_metadata_awareness.xml_to_mongo:load_xml_to_mongodb'

# New aliases for Makefile scripts
add-duckdb-key-value-row = 'external_metadata_awareness.add_duckdb_key_value_row:main'
dump-sra-metadata-schema = 'external_metadata_awareness.dump_sra_metadata_table_schema:main'
env-triad-values-splitter = 'external_metadata_awareness.new_env_triad_values_splitter:main'
export-sra-accession-pairs = 'external_metadata_awareness.export_sra_accession_pairs:main'
extract-ncbi-packages-fields = 'external_metadata_awareness.extract_all_ncbi_packages_fields:main'
infer-biosample-env-context-curies = 'external_metadata_awareness.infer_biosample_env_context_obo_curies:main'
load-bioprojects-into-mongodb = 'external_metadata_awareness.load_acceptable_sized_leaf_bioprojects_into_mongodb:main'
mongodb-biosamples-to-duckdb = 'external_metadata_awareness.mongodb_biosamples_to_duckdb:main'
ncbi-package-info-to-duckdb = 'external_metadata_awareness.ncbi_package_info_to_duck_db:main'
prioritize-lexmatch-results = 'external_metadata_awareness.prioritize_lexmatch_results:main'
sra-accession-pairs-to-mongo = 'external_metadata_awareness.sra_accession_pairs_tsv_to_mongo:main'
sra-parquet-to-mongodb = 'external_metadata_awareness.sra_parquet_to_mongodb:main'
