[tool.poetry]
name = "external-metadata-awareness"
version = "0.1.0"
description = "Tools for fetching and processing external schemas, ontologies and metadata records. Includes value set maintenance."
authors = ["Mark A. Miller <MAM@lbl.gov>"]
readme = "CLAUDE.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
db-dtypes = "^1.4.1"
duckdb = "^1.0.0"
duckdb-engine = "^0.14.0"
folium = "^0.19.4" # maps
git-filter-repo = "^2.47.0"
google-cloud-bigquery = "^3.25.0"
google-cloud-bigquery-storage = "^2.28.0"
gsheet-pandas = "^0.2.8"
gspread = "^6.1.2"
jupyter = "^1.1.1"
llm = "^0.15"
lxml = "^5.3.0"
matplotlib = "^3.9.2"
notebook = "^7.3.2"
numpy = "^2.1.0"
oaklib = "^0.6.14"
oauth2client = "^4.1.3"
openpyxl = "^3.1.5"
pandas = "^2.2.2"
plotly = "^6.0.1"
psycopg2-binary = "^2.9.9"
pyarrow = "^18.1.0"
pygithub = "^2.3.0"
pymongo = "^4.8.0"
pymupdf = "^1.25.3"
python-dotenv = "^1.0.1"
quantulum3 = "^0.9.2"
rapidfuzz = "^3.12.1"
rasterio = "^1.4.3"
scikit-learn = "1.5.0"
scipy = "^1.14.1"
stemming = "^1.0.1"
tqdm = "^4.66.5"
xmltodict = "^0.13.0"
requests = "^2.32.3"
pyyaml = "^6.0.2"
linkml-runtime = "^1.9.1"
sqlalchemy = "^2.0.40"
requests-cache = "^1.2.1"
openai = "^1.74.0"
jsonasobj2 = "^1.0.4"
prefixmaps = "^0.2.6"
linkml = "^1.8.7"
curies = "^0.10.11"
case-converter = "^1.2.0"
dateparser = "^1.2.2"
geopy = "^2.4.1"
json-tabulate = "^0.1.4"

[tool.poetry.group.dev.dependencies]
deptry = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# Original aliases
biosample-json-to-context-tsv = 'external_metadata_awareness.biosample_json_to_context_tsv:create_biosample_table'
build-prompt-from-template = 'external_metadata_awareness.build_prompt_from_template:process_files'
count-xml-paths = 'external_metadata_awareness.count_xml_paths:main'
get-extension-unique-slots = 'external_metadata_awareness.get_extension_unique_slots:process_json'
random-sample-resources = 'external_metadata_awareness.adhoc.random_sample_resources:downsample_json_resources'
xml-to-mongo = 'external_metadata_awareness.xml_to_mongo:load_xml_to_mongodb'

# New aliases for Makefile scripts
add-duckdb-key-value-row = 'external_metadata_awareness.add_duckdb_key_value_row:main'
analyze-collection-flatness = 'external_metadata_awareness.analyze_collection_flatness:main'
dump-sra-metadata-schema = 'external_metadata_awareness.dump_sra_metadata_table_schema:main'
env-triad-values-splitter = 'external_metadata_awareness.new_env_triad_values_splitter:main'
env-triad-oak-annotator = 'external_metadata_awareness.new_env_triad_oak_annotator:main'
env-triad-ols-annotator = 'external_metadata_awareness.new_env_triad_ols_annotator:main'
env-triad-check-semsql-curies = 'external_metadata_awareness.new_check_semsql_curies:main'
env-triad-bioportal-curie-mapper = 'external_metadata_awareness.new_bioportal_curie_mapper:main'
populate-env-triads-collection = 'external_metadata_awareness.populate_env_triads_collection:populate'
normalize-biosample-measurements = 'external_metadata_awareness.normalize_biosample_measurements:main'
export-sra-accession-pairs = 'external_metadata_awareness.export_sra_accession_pairs:main'
extract-ncbi-packages-fields = 'external_metadata_awareness.extract_all_ncbi_packages_fields:main'
infer-biosample-env-context-curies = 'external_metadata_awareness.infer_biosample_env_context_obo_curies:main'
load-bioprojects-into-mongodb = 'external_metadata_awareness.load_acceptable_sized_leaf_bioprojects_into_mongodb:main'
mongodb-biosamples-to-duckdb = 'external_metadata_awareness.mongodb_biosamples_to_duckdb:main'
mongo-connect = 'external_metadata_awareness.mongodb_connection:main'
mongo-js-executor = 'external_metadata_awareness.mongo_js_executor:main'
ncbi-package-info-to-duckdb = 'external_metadata_awareness.ncbi_package_info_to_duck_db:main'
prioritize-lexmatch-results = 'external_metadata_awareness.prioritize_lexmatch_results:main'
sra-accession-pairs-to-mongo = 'external_metadata_awareness.sra_accession_pairs_tsv_to_mongo:load_tsv_to_mongo'
sra-parquet-to-mongodb = 'external_metadata_awareness.sra_parquet_to_mongodb:insert_parquet_to_mongo'

# Gold Makefile aliases
flatten-gold-biosamples = 'external_metadata_awareness.insert_all_flat_gold_biosamples:main'
flatten-gold-studies = 'external_metadata_awareness.insert_all_flat_gold_studies:main'
flatten-gold-seq-projects = 'external_metadata_awareness.insert_all_flat_gold_seq_projects:main'
export-flattened-gold-csv = 'external_metadata_awareness.export_flattened_gold_to_csv:main'

# Biosample attributes scripts
flatten-biosample-attributes = 'external_metadata_awareness.flatten_biosample_attributes:extract_attributes'

# GitHub tools
fetch-github-releases = 'external_metadata_awareness.fetch_github_releases:main'

# Measurement discovery tools
measurement-discovery-efficient = 'external_metadata_awareness.measurement_discovery_efficient:main'

# Biosample normalization tools
normalize-satisfying-biosamples = 'external_metadata_awareness.normalize_satisfying_biosamples:normalize_biosamples'

# NMDC analysis tools
analyze-nmdc-biosample-coverage = 'external_metadata_awareness.analyze_nmdc_biosample_coverage:main'

[tool.deptry.per_rule_ignores]
DEP001 = ["common", "core"] # locally defined
DEP002 = [
    "db-dtypes",
    "duckdb-engine", # infer_biosample_env_context_obo_curies.py
    "git-filter-repo",
    "gspread", # gsheets_helper.py
    "jupyter",
    "llm",
    "notebook",
    "oauth2client",
    "openpyxl",
    "psycopg2-binary",
    "rapidfuzz",
    "stemming",
]

# ● Based on my analysis of indirect library usage, here are the findings for the libraries in DEP002 ignores:
#
#  1. db-dtypes:
#    - Indirectly used through the Google BigQuery client in several files:
#    - /home/mark/gitrepos/external-metadata-awareness/external_metadata_awareness/adhoc/list_public_gcp_bq_databases.py
#    - /home/mark/gitrepos/external-metadata-awareness/external_metadata_awareness/dump_sra_metadata_table_schema.py
#    - /home/mark/gitrepos/external-metadata-awareness/external_metadata_awareness/export_sra_accession_pairs.py
#    - /home/mark/gitrepos/external-metadata-awareness/notebooks/studies_exploration/simons_wishlist/filtered_sra_metadata_to_mongo.ipynb
#    - db-dtypes is a dependency for Google BigQuery when using pandas with certain data types
#  2. openpyxl:
#    - Indirectly used by pandas in Excel operations:
#    - /home/mark/gitrepos/external-metadata-awareness/notebooks/mixs_preferred_unts/mixs_preferred_units.ipynb (uses pd.read_excel())
#    - /home/mark/gitrepos/external-metadata-awareness/notebooks/studies_exploration/stream_bank_riparian/stream_bank_riparian.ipynb
#    - openpyxl is the default Excel engine for pandas
#  3. duckdb-engine:
#    - Directly used in /home/mark/gitrepos/external-metadata-awareness/external_metadata_awareness/infer_biosample_env_context_obo_curies.py
#    - Used to create SQLAlchemy engines for DuckDB access
#  4. gspread:
#    - Directly used in /home/mark/gitrepos/external-metadata-awareness/external_metadata_awareness/adhoc/gsheets_helper.py
#  5. oauth2client:
#    - May be indirectly used by gspread in the gsheets_helper.py file, which uses credential files
#  6. jupyter & notebook:
#    - Used in deptry_with_notebooks.sh script for notebook conversion
#    - Required for running all your Jupyter notebooks
#  7. psycopg2-binary:
#    - No direct or clear indirect usage found
#    - May be used by SQLAlchemy for PostgreSQL connections in code not shown
#  8. rapidfuzz:
#    - No direct usage found
#    - Potential use in your notebook files where string matching occurs
#  9. stemming:
#    - No direct or clear indirect usage found
#  10. git-filter-repo:
#    - No direct usage in code, but mentioned in CLAUDE.md
#    - May be used in manual git operations or scripting
#  11. llm:
#    - No direct or clear indirect usage found