[tool.poetry]
name = "external-metadata-awareness"
version = "0.1.0"
description = "MongoDB + Parquet analytics for NCBI BioSample/BioProject/SRA and NMDC submission-portal metadata. Environmental triad annotation, harmonized-attribute counts, measurement discovery, value-set voting sheets."
authors = ["Mark A. Miller <MAM@lbl.gov>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
db-dtypes = "^1.4.1"
duckdb = "^1.0.0"
duckdb-engine = ">=0.14,<0.18"
folium = ">=0.19.4,<0.21.0" # maps
google-cloud-bigquery = "^3.25.0"
google-cloud-bigquery-storage = "^2.28.0"
gsheet-pandas = ">=0.2.8,<0.4.0"
gspread = "^6.1.2"
jupyter = "^1.1.1"
lxml = "^6.0.2"
matplotlib = "^3.10.8"
notebook = "^7.3.2"
numpy = "^2.1.0"
oaklib = "^0.6.14"
openpyxl = "^3.1.5"
pandas = "^2.2.2"
plotly = "^6.0.1"
pyarrow = ">=23.0.1,<25.0.0"
pygithub = "^2.3.0"
pymongo = "^4.8.0"
pymupdf = "^1.26.7"
python-dotenv = "^1.0.1"
quantulum3 = ">=0.9.2,<0.11.0"
rasterio = "^1.4.3"
scikit-learn = ">=1.7,<2"
scipy = "^1.14.1"
tqdm = "^4.66.5"
xmltodict = ">=0.13,<1.1"
requests = "^2.33.0"
pyyaml = "^6.0.2"
linkml-runtime = "^1.9.1"
sqlalchemy = "^2.0.40"
requests-cache = "^1.2.1"
openai = ">=1.74,<3.0"
jsonasobj2 = "^1.0.4"
prefixmaps = "^0.2.6"
linkml = "^1.8.7"
curies = ">=0.10.11,<0.14.0"
case-converter = "^1.2.0"
dateparser = "^1.2.2"
geopy = "^2.4.1"
json-tabulate = "^0.1.4"
nmdc-submission-schema = "^11.17.0"

[tool.poetry.group.dev.dependencies]
deptry = ">=0.23,<0.26"
pytest = ">=8.3,<9"
tomli = { version = ">=2.0,<3", python = "<3.11" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# Original aliases
biosample-json-to-context-tsv = 'external_metadata_awareness.biosample_json_to_context_tsv:create_biosample_table'
build-prompt-from-template = 'external_metadata_awareness.build_prompt_from_template:process_files'
count-xml-paths = 'external_metadata_awareness.count_xml_paths:main'
random-sample-resources = 'external_metadata_awareness.adhoc.random_sample_resources:downsample_json_resources'
xml-to-mongo = 'external_metadata_awareness.xml_to_mongo:load_xml_to_mongodb'

# New aliases for Makefile scripts
analyze-collection-flatness = 'external_metadata_awareness.analyze_collection_flatness:main'
dump-sra-metadata-schema = 'external_metadata_awareness.dump_sra_metadata_table_schema:main'
env-triad-values-splitter = 'external_metadata_awareness.new_env_triad_values_splitter:main'
env-triad-oak-annotator = 'external_metadata_awareness.new_env_triad_oak_annotator:main'
env-triad-ols-annotator = 'external_metadata_awareness.new_env_triad_ols_annotator:main'
env-triad-check-semsql-curies = 'external_metadata_awareness.new_check_semsql_curies:main'
env-triad-bioportal-curie-mapper = 'external_metadata_awareness.new_bioportal_curie_mapper:main'
populate-env-triads-collection = 'external_metadata_awareness.populate_env_triads_collection:populate'
normalize-biosample-measurements = 'external_metadata_awareness.normalize_biosample_measurements:main'
export-sra-accession-pairs = 'external_metadata_awareness.export_sra_accession_pairs:main'
extract-ncbi-packages-fields = 'external_metadata_awareness.extract_all_ncbi_packages_fields:main'
load-bioprojects-into-mongodb = 'external_metadata_awareness.load_acceptable_sized_leaf_bioprojects_into_mongodb:main'
mongo-connect = 'external_metadata_awareness.mongodb_connection:main'
mongo-js-executor = 'external_metadata_awareness.mongo_js_executor:main'
prioritize-lexmatch-results = 'external_metadata_awareness.prioritize_lexmatch_results:main'
sra-accession-pairs-to-mongo = 'external_metadata_awareness.sra_accession_pairs_tsv_to_mongo:load_tsv_to_mongo'
sra-parquet-to-mongodb = 'external_metadata_awareness.sra_parquet_to_mongodb:insert_parquet_to_mongo'

# Biosample attributes scripts
flatten-biosample-attributes = 'external_metadata_awareness.flatten_biosample_attributes:extract_attributes'

# GitHub tools
fetch-github-releases = 'external_metadata_awareness.fetch_github_releases:main'

# Measurement discovery tools
measurement-discovery-efficient = 'external_metadata_awareness.measurement_discovery_efficient:main'

# Biosample normalization tools
normalize-satisfying-biosamples = 'external_metadata_awareness.normalize_satisfying_biosamples:normalize_biosamples'

# DuckDB export tools
export-duckdb-to-parquet = 'external_metadata_awareness.export_duckdb_to_parquet:export_duckdb_to_parquet'
export-submissions-to-duckdb = 'external_metadata_awareness.export_submissions_to_duckdb:main'

# NMDC analysis tools
analyze-nmdc-biosample-coverage = 'external_metadata_awareness.analyze_nmdc_biosample_coverage:main'
extract-nmdc-doi-inventory = 'external_metadata_awareness.extract_nmdc_doi_inventory:extract_nmdc_doi_inventory'

[tool.deptry.per_rule_ignores]
DEP001 = ["common", "core"] # locally defined
DEP002 = [
    "db-dtypes",
    "duckdb-engine", # infer_biosample_env_context_obo_curies.py
    "gspread", # gsheets_helper.py
    "jupyter",
    "notebook",
    "openpyxl",
]

# The packages above are declared but not imported directly; they are used
# indirectly at runtime, so DEP002 ignores them:
#   db-dtypes, openpyxl  pulled in by pandas / google-cloud-bigquery (BigQuery, read_excel)
#   duckdb-engine        SQLAlchemy engine for DuckDB
#   gspread              adhoc/gsheets_helper.py
#   jupyter, notebook    running the notebooks

[tool.ruff]
# `ruff check .` lints every .py file in the repo; only Jupyter notebooks
# are excluded, matching CodeQL's scan scope (which also skips .ipynb).
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
# Code-quality rules matching the CodeQL standard findings resolved in #454:
# unused import, unused local, bare except, exit()/quit(), unnecessary lambda.
select = ["F401", "F841", "E722", "PLR1722", "PLW0108"]

[tool.pytest.ini_options]
# Only collect the dedicated test suite; do not auto-discover the adhoc
# scripts (e.g. cborg_test.py matches pytest's *_test.py pattern and has
# import-time side effects).
testpaths = ["tests"]
